<resources>
    <string name="app_name">Calculator</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="divide_sign">/</string>
    <string name="multiply_sign">*</string>
    <string name="button_point">.</string>
    <string name="button_del">DEL</string>
    <string name="equals_sign">=</string>
    <string name="cos">COS</string>
    <string name="sin">SIN</string>
    <string name="tan">TAN</string>
    <string name="square_root">SQRT</string>
    <string name="pi">PI</string>
    <string name="cubic_root">CSQRT</string>
    <string name="log">LOG</string>
    <string name="LN">LN</string>
</resources>